# jetson.flappybird

./: .gitignore  Cargo.toml  analyze_bird_death.py  check_config.py  clear_cache.sh  config.py  debug_single_episode.py  debug_stuck_at_1.py  fix_numpy.sh  force_clear_cache.py  quick_test.py  requirements.txt  setup.sh  start_training.sh  test_ai.py  test_all_models.py  test_fixes.py  test_immediate_pass.py  test_pipe_spawn_fix.py  test_ultra_easy.py  train.sh  train_ai.py  verify_and_train.sh  verify_ready_to_train.py  visualize_training.py  watch_model.py
models/: .gitkeep
plots/: .gitkeep
src/: lib.rs  main.rs
