[package]
name = "flappybird"
version = "0.1.0"
edition = "2021"

[lib]
name = "flappybird_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "flappybird"
path = "src/main.rs"

[dependencies]
ggez = "0.9.3"
rand = "0.9.2"
pyo3 = { version = "0.15.2", features = ["extension-module"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
python = ["pyo3"]